fix alignments

--- a/src/app/ai-search/ai-search.page.scss
+++ b/src/app/ai-search/ai-search.page.scss
@@ -8,6 +8,7 @@
 
 ion-header {
   background: transparent;
+  padding: 8px 4px 0;
 }
 
 .close-button {
