--- a/src/app/quick-actions/quick-actions.component.scss
+++ b/src/app/quick-actions/quick-actions.component.scss
@@ -72,7 +72,7 @@
 }
 
 .footer {
-  height: 75px;
+  height: 70px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
