--- a/src/app/switch/switch.page.scss
+++ b/src/app/switch/switch.page.scss
@@ -7,6 +7,7 @@
 
 ion-header {
   background: transparent;
+  padding: 8px 4px 0;
 }
 
 ion-content {
