--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -1,5 +1,5 @@
 ion-tab-bar {
-  height: 75px;
+  height: 70px;
 }
 
 .quick-actions-wrapper {
